<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="description">Description</string>
    <string name="event_title">Event title</string>
    <string name="end_date">End date</string>
    <string name="location">Location</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="settings">Settings</string>
    <string name="start_date">Start date</string>
    <string name="enter_valid_title">Enter valid title</string>
    <string name="enter_valid_start_date">Enter valid start date</string>
    <string name="enter_valid_end_date_time">Enter valid end date</string>
    <string name="repeat">Repeat</string>


</resources>