<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RootLayout"
    android:paddingBottom="0dp"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="75dp"
        android:clipToPadding="false"
        >

        <androidx.cardview.widget.CardView
            style="@style/LayoutContainerCardView"
            app:cardElevation="16dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                tools:context="daniel.perez.generateqrview.GenerateQR">

                <TextView
                    style="@style/FormTitleTextView"
                    android:text="@string/event_title" />

                <androidx.cardview.widget.CardView
                    style="@style/FormCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/title_edit_text"
                        style="@style/FormEditText"
                        android:inputType="textCapWords" />
                </androidx.cardview.widget.CardView>


                <TextView
                    style="@style/FormTitleTextView"
                    android:text="@string/start_date" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        style="@style/FormCardView"
                        android:id="@+id/startDateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/start_date_textView"
                            style="@style/FormDateTextView"
                            android:layout_height="wrap_content"
                            android:text="@string/select_date" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/startTimeEditText"
                        style="@style/FormCardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/start_time_textView"
                            style="@style/FormDateTextView"
                            android:text="@string/select_time" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <TextView
                    style="@style/FormTitleTextView"
                    android:text="@string/end_date" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/endDateEditText"
                        style="@style/FormCardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/end_date_textView"
                            style="@style/FormDateTextView"
                            android:text="@string/select_date" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/endTimeEditText"
                        style="@style/FormCardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/end_time_textView"
                            style="@style/FormDateTextView"
                            android:text="@string/select_time" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <TextView
                    style="@style/FormTitleTextView"
                    android:text="@string/repeat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <androidx.cardview.widget.CardView
                    android:id="@+id/recurrence_card"
                    style="@style/FormCardView"
                    android:gravity="end"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:layout_gravity="center"
                        android:id="@+id/recurrence_spinner"
                        android:layout_width="match_parent"
                        style="@style/FormEditText"
                        android:layout_height="wrap_content"/>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

                <TextView
                    style="@style/FormTitleTextView"
                    android:text="@string/location" />

                <androidx.cardview.widget.CardView
                    style="@style/FormCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/location_edit_text"
                        style="@style/FormEditText" />
                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/FormTitleTextView"
                    android:text="@string/description" />

                <androidx.cardview.widget.CardView
                    style="@style/FormCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/description_edit_text"
                        style="@style/FormEditText" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </ScrollView>
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/toolbar"
        style="@style/CustomBottomAppBar"
        app:fabAlignmentMode="end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Generate QR"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/white" />

        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/finish_button"
        style="@style/FAB"
        android:layout_gravity="bottom|center"
        android:src="@drawable/ic_check_white_36dp"
        app:layout_anchor="@+id/toolbar" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>